# advent-of-code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg
2015/day01/: part-1.py  part-2.py
2015/day02/: part-1.py  part-2.py
2015/day03/: part-1.py  part-2.py
2015/day04/: part-1.py  part-2.py
2015/day05/: part-1.py  part-2.py
2015/day06/: part-1.py  part-2.py
2015/day07/: part-1.py  part-2.py
2015/day08/: part-1.py  part-2.py
2015/day09/: part-1.py  part-2.py
2015/day10/: part-1.py  part-2.py
2015/day11/: part-1.py  part-2.py
2015/day12/: part-1.py  part-2.py
2015/day13/: part-1.py  part-2.py
2015/day14/: part-1.py  part-2.py
2015/day15/: part-1.py  part-2.py
2015/day16/: part-1.py  part-2.py
2015/day17/: part-1.py  part-2.py
2015/day18/: part-1.py  part-2.py
2015/day19/: part-1.py  part-2.py
2015/day20/: part-1.py  part-2.py
2015/day21/: part-1.py  part-2.py
2015/day22/: part-1.py  part-2.py
2015/day23/: part-1.py  part-2.py
2015/day24/: part-1.py  part-2.py
2015/day25/: part-1.py
2025/day01/: part-1.py  part-2.py
2025/day02/: part-1.py  part-2.py
2025/day03/: part-1.py  part-2.py
2025/day04/: part-1.py  part-2.py
2025/day05/: part-1.py  part-2.py
2025/day06/: part-1.py  part-2.py
2025/day07/: part-1.py  part-2.py
2025/day08/: part-1.py  part-2.py
2025/day09/: part-1.py  part-2.py
2025/day10/: part-1.py
2025/day11/: part-1.py  part-2.py
utils/: io.py  point.py
year_2015/day_1/: part_1.py  part_2.py
year_2015/day_10/: part_1.py  part_2.py
year_2015/day_11/: part_1.py  (+1 more)
(+120 files in other folders)
